# VanEmdeBoas

./: CMakeLists.txt  LICENSE  README.md
eval/: make_parallel_plots.py  make_plots.py
implementation/: hash_table.hpp  van_emde_boas.hpp  van_emde_boas32.hpp  van_emde_boas32_bottom.hpp  van_emde_boas32_locked.hpp  van_emde_boas32_locked_fine_grained.hpp  van_emde_boas32_locked_top.hpp  van_emde_boas32_lockless.hpp  van_emde_boas_locked.hpp
measurements/: parallelVeb.csv  veb.csv
test/: parallel_test_van_emde_boas.cpp  parallel_timing_van_emde_boas.cpp  test_van_emde_boas.cpp  timing_van_emde_boas.cpp
utils/: csv_printer.hpp  generators.hpp  safe_ptr.h  utils.hpp
